2001-04-11  Martin Baulig  <baulig@suse.de>

	* gnome-util.h (PATH_SEP, PATH_SEP_STR): Moved to libgnomeP.h.
	(g_is_image_filename): Removed function prototype.

	* gnome-util.h (g_file_exists): Removed; use g_file_test() instead.

2001-03-24  Martin Baulig  <baulig@suse.de>

	* libgnome-2.0.pc.in: Depend on gconf-2.0.

2001-02-26  jacob berkman  <jacob@ximian.com>

	* gnome-url.c: default to using nautilus for help browsing if it
	is available

2000-07-26  John Sullivan  <sullivan@eazel.com>

	* gnome-sound.c (use_sound): Moved this function out of a
	#ifndef HAVE_LIBAUDIOFILE and into #ifdef HAVE_ESD.
	This fixes the build breakage caused earlier today by Miguel's change.

2000-07-11  Miguel de Icaza  <miguel@gnu.org>

	* gnome-sound.c (gnome_sound_init): Store the esound hostname
	here.
	(gnome_sound_play): Use the use_sound routine here.
	(gnome_sound_sample_load): ditto.
	(use_sound): Delayed initialization of sound.

2000-05-27  Miguel de Icaza  <miguel@helixcode.com>

	* gnome-exec.c (gnome_execute_async_with_env_fds): Invoke setsid()
	before execing the child process, as some applications terminate
	by doing kill (0, SIGTERM) (mgp), so when we launch them from the
	file manager they get the SIGTERM Message as well

2000-04-03  Miguel de Icaza  <miguel@gnu.org>

	* gnome-fileconvert.c (gfc_read_FileConverters): Do not depend on
	initialization sequence to run.

	* parse-path.cP (parse_path): Do not depend on the initialization sequence

2001-03-21  Martin Baulig  <baulig@suse.de>

	* Makefile.am: We're now in the new libgnome-2 module.
	(bin_PROGRAMS): Don't build gnome-moz-remote for the moment since
	it depends on X.

2001-03-21  Martin Baulig  <baulig@suse.de>

	* gnome-program.h (GNOME_PARAM_POPT_FLAGS, GNOME_PARAM_POPT_CONTEXT):
	New properties.

	* gnome-program.[ch]
	(gnome_program_module_register, gnome_program_module_registered,
	gnome_program_module_load): Removed the `GnomeProgram *' argument.