@@ -26,25 +26,26 @@
 #ifndef LIBGNOME_H
 #define LIBGNOME_H
 
-#include "libgnome/gnome-portability.h"
-#include "libgnome/gnome-defs.h"
+#include <libgnome/gnome-portability.h>
+#include <libgnome/gnome-defs.h>
 
-#include "libgnome/gnome-config.h"
-#include "libgnome/gnome-exec.h"
-#include "libgnome/gnome-i18n.h"
+#include <libgnome/gnome-config.h>
+#include <libgnome/gnome-exec.h>
+#include <libgnome/gnome-i18n.h>
 
 /* Should this be in gnome-print? */
-#include "libgnome/gnome-paper.h"
-#include "libgnome/gnome-remote.h"
-#include "libgnome/gnome-score.h"
-#include "libgnome/gnome-triggers.h"
-#include "libgnome/gnome-util.h"
-#include "libgnome/gnome-url.h"
-#include "libgnome/gnome-program.h"
-#include "libgnome/gnomelib-init.h"
+#include <libgnome/gnome-paper.h>
+#include <libgnome/gnome-remote.h>
+#include <libgnome/gnome-score.h>
+#include <libgnome/gnome-triggers.h>
+#include <libgnome/gnome-util.h>
+#include <libgnome/gnome-url.h>
+#include <libgnome/gnome-program.h>
+#include <libgnome/gnome-ditem.h>
+#include <libgnome/gnomelib-init.h>
 
 #ifdef COMPAT_1_0
-#include "compat/1.0/libgnome/libgnome-compat-1.0.h"
+#include <compat/1.0/libgnome/libgnome-compat-1.0.h>
 #endif
 
 #endif /* LIBGNOME_H */
