@@ -1,5 +1,10 @@
 2001-04-11  Martin Baulig  <baulig@suse.de>
 
+	* libgnome.h: Use #include <libgnome/*.h> instead of "libgnome/*.h"
+	and #include <libgnome/gnome-ditem.h>.
+
+2001-04-11  Martin Baulig  <baulig@suse.de>
+
 	* gnome-util.h (PATH_SEP, PATH_SEP_STR): Moved to libgnomeP.h.
 	(g_is_image_filename): Removed function prototype.
 
